2004-09-14  Sam Steingold  <sds@gnu.org>

	* foreign.d (object_handle): check that the new name is a string

2004-09-14  Sam Steingold  <sds@gnu.org>

	support libsigsegv-2.1 on cygwin,
	which includes <windows.h> from <sigsegv.h>
	* lispbibl.d [UNIX_CYGWIN32]: undefine WIN32 and
	INVALID_HANDLE_VALUE after including <sigsegv.h>
	define unused after including <sigsegv.h> because it is used by woe32
	* pathname.d [UNIX_CYGWIN32]: do not redefine *_PRIORITY_CLASS
	* spvw_sigsegv.d (stackoverflow_handler) [UNIX_CYGWIN32]: use Ebx

2004-09-14  Bruno Haible  <bruno@clisp.org>

	* compiler.lisp (c-report-problems): When reporting unknown functions,
	compare function names with EQUAL, not EQL.

2004-09-14  Bruno Haible  <bruno@clisp.org>

	* condition.lisp (print-condition): Change from generic function to
	plain function. Call print-object.
	(print-object@condition): Don't call print-condition. Instead inline
	its earlier definition.
	(define-condition): Change the macroexpansion to define a method on
	print-object, not on print-condition.
	(print-condition@simple-condition): Remove.
	(print-object@simple-condition): New method.

2004-08-01  Bruno Haible  <bruno@clisp.org>

	Make it possible to call class-precedence-list during compute-slots
	and compute-default-initargs.
	* record.d (do_allocate_instance, update_instance)
	(CLOS::%MAKE-INSTANCE): Test for finalized class by using the
	'initialized' field, not the 'precedence_list' field.
	* clos-class1.lisp (class): Change type of initialized slot to integer.
	(%class-precedence-list): Remove function.
	(shared-initialize-<class>): Set the initialized flag to 0 or 2,
	instead of nil and t.
	* clos-class3.lisp (subclassp): Test for finalized class by using the
	'initialized' slot, not the 'precedence-list' slot.
	(reinitialize-instance-<class>): Likewise.
	(std-compute-subclass-of-stablehash-p, compute-slots-<class>-primary)
	(compute-slots-<slotted-class>-around)
	(compute-default-initargs-<class>):